gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-return-type-is-anon.rs
struct Foo {
  field: i32
}

impl Foo {
  fn foo<'a>(&self, x: &'a i32) -> &i32 {

    x // { dg-error ".E0623." "" { target *-*-* } }

  }

}

fn main() { }

